--- a/SistemaDoLeoBlazor.WEB/SistemaDoLeoBlazor.WEB.csproj
+++ b/SistemaDoLeoBlazor.WEB/SistemaDoLeoBlazor.WEB.csproj
@@ -22,6 +22,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Content Remove="Pages\CadOperador.razor.razor" />
     <Content Remove="wwwroot\css\animate.min.css" />
     <Content Remove="wwwroot\css\Elegant-Registration-Form.css" />
     <Content Remove="wwwroot\css\Floating-Button.css" />
