--- a/SistemaDoLeoBlazor.WEB/SistemaDoLeoBlazor.WEB.csproj
+++ b/SistemaDoLeoBlazor.WEB/SistemaDoLeoBlazor.WEB.csproj
@@ -50,6 +50,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Blazored.SessionStorage" Version="2.4.0" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="7.0.10" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="7.0.10" PrivateAssets="all" />
   </ItemGroup>
