Implementado opção de pesquisa em todas as telas e realizado ajuste nas consultas
Adicionado o css na tela de AddProduto

--- a/SistemaDoLeoBlazor.WEB/SistemaDoLeoBlazor.WEB.csproj
+++ b/SistemaDoLeoBlazor.WEB/SistemaDoLeoBlazor.WEB.csproj
@@ -30,6 +30,7 @@
 
   <ItemGroup>
     <None Remove="Pages\CadOperador.html" />
+    <None Remove="Shared\Consulta.html" />
   </ItemGroup>
 
   <ItemGroup>
